# python-project-init

./: .coverage  CONTRIBUTING.md  INTERFACES.md  Makefile  README.md  pyproject.toml
docs/interfaces/: ConfigManager.md  ProjectConfig.md  ProjectGenerator.md  ProjectInitCLI.md  TemplateEngine.md
project_init/: __init__.py  cli.py  config.py  template_engine.py
project_init/templates/bash/: .gitignore.j2  .pre-commit-config.yaml.j2  README.md.j2
project_init/templates/bash/scripts/: {{ script_name }}.j2
project_init/templates/python/: Makefile.j2  pyproject.toml.j2
project_init/templates/python/docs/sphinx/: api.rst.j2
project_init/templates/python/src/{{ package_name }}/: cli.py.j2
python_project_init/: __init__.py  cli.py  config.py  models.py  template_engine.py
python_project_init/templates/bash/: Makefile.j2
python_project_init/templates/bash/.github/workflows/: ci.yml.j2
python_project_init/templates/generic/: .pre-commit-config.yaml.j2  Dockerfile.j2  Makefile.j2  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2
python_project_init/templates/generic/.github/workflows/: ci.yml.j2  docs.yml.j2
python_project_init/templates/generic/docs/: api.rst.j2  conf.py.j2  index.rst.j2  installation.rst.j2
python_project_init/templates/generic/package_template/: __init__.py.j2  app.py.j2  main.py.j2
python_project_init/templates/generic/tests/: test_main.py.j2
python_project_init/templates/python/: .gitignore.j2  LICENSE.j2  Makefile.j2
python_project_init/templates/python/docs/sphinx/: conf.py.j2  usage.rst.j2
python_project_init/templates/python/tests/: test_app.py.j2
tests/: __init__.py  test_cli.py  test_models.py  test_template_engine.py
