[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-project-init"
dynamic = ["version"]
description = "A CLI tool to initialize projects (Python, Bash) from templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ryan Nikolaidis" },
]
keywords = ["python", "bash", "template", "cli", "project", "initialization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pyright>=1.1.300",
    "pre-commit>=3.6.0",
]

[project.scripts]
ppi = "python_project_init.cli:app"

[project.urls]
Homepage = "https://github.com/ryannikolaidis/python-project-init"
Repository = "https://github.com/ryannikolaidis/python-project-init"
Issues = "https://github.com/ryannikolaidis/python-project-init/issues"

[tool.hatch.version]
path = "python_project_init/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["python_project_init"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["python_project_init"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
# Fast and accurate type checking
useLibraryCodeForTypes = true
# Exclude build artifacts for faster checking
exclude = [
    "tests/",
    ".venv/",
    "build/",
    "dist/",
]
# Report settings
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=python_project_init --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
